refactor: encode URLs with StandardCharsets